[gd_scene load_steps=40 format=2]

[ext_resource path="res://Art/Sprites/Environment/outdoors.png" type="Texture" id=1]
[ext_resource path="res://Art/Sprites/Enemies/Blacksmith_walk.png" type="Texture" id=2]
[ext_resource path="res://Art/Sprites/Hero/Kid01_idle.png" type="Texture" id=3]
[ext_resource path="res://Art/Sprites/Enemies/Blacksmith_idle.png" type="Texture" id=4]
[ext_resource path="res://Art/Sprites/Hero/Kid01_walk.png" type="Texture" id=5]
[ext_resource path="res://Textbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overworld.gd" type="Script" id=7]
[ext_resource path="res://Art/Sprites/Environment/Busted.png" type="Texture" id=8]
[ext_resource path="res://Art/Sprites/Enemies/Possessed/Right/Png/PossesedRightIdle.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=10]
0/name = "outdoors.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 80, 64, 160 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "outdoors.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 80 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "outdoors.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 64, 192 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "outdoors.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 0, 64, 224 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 10 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "outdoors.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 192, 0, 128, 256 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 16, 16 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "outdoors.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 320, 0, 128, 80 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "outdoors.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 320, 80, 128, 160 )
6/tile_mode = 2
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 16, 16 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "outdoors.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 256, 144, 96 )
7/tile_mode = 2
7/autotile/icon_coordinate = Vector2( 0, 0 )
7/autotile/tile_size = Vector2( 16, 16 )
7/autotile/spacing = 0
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "outdoors.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 160, 240, 32, 48 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "outdoors.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 320, 224, 48, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 32, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 32, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 64, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 96, 144, 32, 48 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle (U)",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Idle (L)",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Walk (U)",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 32, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 64, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 96, 96, 32, 48 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Walk (R)",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Idle (R)",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Overworld" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = SubResource( 10 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 3
format = 1
tile_data = PoolIntArray( 0, 4, 983044, 1, 4, 131073, 2, 4, 983044, 3, 4, 983044, 4, 4, 983044, 5, 4, 983044, 6, 4, 983044, 7, 4, 983044, 8, 4, 983044, 9, 4, 131073, 10, 4, 983044, 11, 4, 983044, 12, 4, 983044, 13, 4, 983044, 14, 4, 983044, 15, 4, 983044, 16, 4, 983044, 17, 4, 983044, 18, 4, 983044, 19, 4, 983044, 20, 4, 983044, 21, 4, 131073, 22, 4, 983044, 23, 4, 983044, 24, 4, 983044, 25, 4, 983044, 26, 4, 983044, 27, 4, 983044, 28, 4, 131073, 29, 4, 983044, 65536, 5, 1, 65537, 0, 131072, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 131073, 65557, 0, 131073, 65558, 0, 131073, 65559, 0, 131073, 65560, 0, 131073, 65561, 0, 131073, 65562, 0, 131073, 65563, 0, 131073, 65564, 0, 131074, 65565, 5, 5, 131072, 5, 262146, 131073, 0, 196608, 131074, 0, 196609, 131075, 0, 262145, 131076, 0, 262145, 131077, 0, 262145, 131078, 0, 262145, 131079, 0, 262145, 131080, 0, 262145, 131081, 0, 262145, 131082, 0, 262145, 131083, 0, 262145, 131084, 0, 262145, 131085, 0, 262145, 131086, 0, 262145, 131087, 0, 262145, 131088, 0, 262145, 131089, 0, 262145, 131090, 0, 262145, 131091, 0, 262145, 131092, 0, 262145, 131093, 0, 262145, 131094, 0, 262145, 131095, 0, 262145, 131096, 0, 262145, 131097, 0, 262145, 131098, 0, 262145, 131099, 0, 196609, 131100, 0, 196610, 131101, 5, 262147, 196608, 5, 262146, 196609, 0, 196608, 196610, 0, 196610, 196611, 3, 131072, 196612, 3, 131073, 196613, 3, 131073, 196614, 3, 1, 196615, 3, 131073, 196616, 3, 131072, 196617, 3, 131073, 196618, 3, 131073, 196619, 3, 458754, 196620, 3, 131073, 196621, 3, 131073, 196622, 3, 1, 196623, 3, 2, 196624, 3, 131073, 196625, 3, 131073, 196626, 3, 131072, 196627, 3, 131073, 196628, 3, 131073, 196629, 3, 262147, 196630, 3, 131072, 196631, 3, 131073, 196632, 3, 131073, 196633, 3, 2, 196634, 3, 131073, 196635, 0, 196608, 196636, 0, 196610, 196637, 5, 262147, 262144, 5, 262146, 262145, 0, 196608, 262146, 0, 196610, 262147, 3, 131073, 262148, 3, 131073, 262149, 3, 131073, 262150, 3, 65537, 262151, 3, 131073, 262152, 3, 131073, 262153, 3, 131073, 262154, 3, 131073, 262155, 3, 131073, 262156, 3, 131073, 262157, 3, 131073, 262158, 3, 65537, 262159, 3, 65538, 262160, 3, 131073, 262161, 3, 131073, 262162, 3, 131073, 262163, 3, 131073, 262164, 3, 131073, 262165, 3, 131073, 262166, 3, 131073, 262167, 3, 131073, 262168, 3, 131073, 262169, 3, 65538, 262170, 3, 131073, 262171, 0, 196608, 262172, 0, 196610, 262173, 5, 262147, 327680, 5, 262146, 327681, 0, 196608, 327682, 0, 196610, 327688, 3, 589825, 327703, 3, 589825, 327707, 0, 196608, 327708, 0, 196610, 327709, 5, 262147, 393216, 5, 262146, 393217, 0, 196608, 393218, 0, 196610, 393220, 9, 0, 393224, 3, 655361, 393233, 3, 589825, 393239, 3, 655361, 393243, 0, 196608, 393244, 0, 196610, 393245, 5, 262147, 458752, 5, 262146, 458753, 0, 196608, 458754, 0, 196610, 458769, 3, 655361, 458773, 8, 0, 458779, 0, 196608, 458780, 0, 196610, 458781, 5, 262147, 524288, 5, 262146, 524289, 0, 196608, 524290, 0, 196610, 524294, 3, 589825, 524300, 3, 589825, 524315, 0, 196608, 524316, 0, 196610, 524317, 5, 262147, 589824, 5, 262146, 589825, 0, 196608, 589826, 0, 196610, 589830, 3, 655361, 589836, 3, 655361, 589842, 3, 589825, 589848, 3, 589825, 589851, 0, 196608, 589852, 0, 196610, 589853, 5, 262147, 655360, 5, 262146, 655361, 0, 196608, 655362, 0, 196610, 655378, 3, 655361, 655384, 3, 655361, 655387, 0, 196608, 655388, 0, 196610, 655389, 5, 262147, 720896, 5, 262146, 720897, 0, 196608, 720898, 0, 196610, 720923, 0, 196608, 720924, 0, 196610, 720925, 5, 262147, 786432, 5, 262146, 786433, 0, 196608, 786434, 0, 196609, 786435, 0, 131073, 786436, 0, 131073, 786437, 0, 131073, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 131073, 786448, 0, 131073, 786449, 0, 131073, 786450, 0, 131073, 786451, 0, 131073, 786452, 0, 131073, 786453, 0, 131073, 786454, 0, 131073, 786455, 0, 131073, 786456, 0, 131073, 786457, 0, 131073, 786458, 0, 131073, 786459, 0, 196609, 786460, 0, 196610, 786461, 5, 262147, 851968, 5, 262146, 851969, 0, 262144, 851970, 0, 262145, 851971, 0, 262145, 851972, 0, 262145, 851973, 0, 262145, 851974, 0, 262145, 851975, 0, 262145, 851976, 0, 262145, 851977, 0, 262145, 851978, 0, 262145, 851979, 0, 262145, 851980, 0, 262145, 851981, 0, 262145, 851982, 0, 262145, 851983, 0, 262145, 851984, 0, 262145, 851985, 0, 262145, 851986, 0, 262145, 851987, 0, 262145, 851988, 0, 262145, 851989, 0, 262145, 851990, 0, 262145, 851991, 0, 262145, 851992, 0, 262145, 851993, 0, 262145, 851994, 0, 262145, 851995, 0, 262145, 851996, 0, 262146, 851997, 5, 262147, 917504, 5, 262146, 917505, 3, 131073, 917506, 3, 2, 917507, 3, 2, 917508, 3, 131073, 917509, 3, 131073, 917510, 3, 131073, 917511, 3, 327680, 917512, 3, 327681, 917513, 3, 131073, 917514, 3, 131073, 917515, 3, 131073, 917516, 3, 131073, 917517, 3, 131073, 917518, 3, 131074, 917519, 3, 131075, 917520, 3, 131073, 917521, 3, 131073, 917522, 3, 131073, 917523, 3, 327680, 917524, 3, 327681, 917525, 3, 131073, 917526, 3, 131073, 917527, 3, 131073, 917528, 3, 131073, 917529, 3, 131073, 917530, 3, 2, 917531, 3, 2, 917532, 3, 131073, 917533, 5, 262147, 983040, 5, 262146, 983041, 3, 131073, 983042, 3, 131073, 983043, 3, 131073, 983044, 3, 131073, 983045, 3, 131073, 983046, 3, 131073, 983047, 3, 131073, 983048, 3, 131073, 983049, 3, 131073, 983050, 3, 131073, 983051, 3, 131073, 983052, 3, 131073, 983053, 3, 131073, 983054, 3, 196610, 983055, 3, 196611, 983056, 3, 131073, 983057, 3, 131073, 983058, 3, 131073, 983059, 3, 131073, 983060, 3, 131073, 983061, 3, 131073, 983062, 3, 131073, 983063, 3, 131073, 983064, 3, 131073, 983065, 3, 131073, 983066, 3, 131073, 983067, 3, 131073, 983068, 3, 131073, 983069, 5, 262147, 1048576, 5, 262145, 1048577, 5, 65537, 1048578, 5, 65537, 1048579, 5, 65537, 1048580, 5, 65537, 1048581, 5, 65537, 1048582, 5, 65537, 1048583, 5, 65537, 1048584, 5, 65537, 1048585, 5, 65537, 1048586, 5, 65537, 1048587, 5, 65537, 1048588, 5, 65537, 1048589, 5, 65537, 1048590, 5, 65537, 1048591, 5, 65537, 1048592, 5, 65537, 1048593, 5, 65537, 1048594, 5, 65537, 1048595, 5, 65537, 1048596, 5, 65537, 1048597, 5, 65537, 1048598, 5, 65537, 1048599, 5, 65537, 1048600, 5, 65537, 1048601, 5, 65537, 1048602, 5, 65537, 1048603, 5, 65537, 1048604, 5, 65537, 1048605, 5, 262149 )

[node name="Hero" type="AnimatedSprite" parent="."]
position = Vector2( 960, 800 )
scale = Vector2( 2, 2 )
z_index = -1
frames = SubResource( 18 )
animation = "Walk (U)"
frame = 3
playing = true

[node name="Bully" type="AnimatedSprite" parent="."]
position = Vector2( 408, 536 )
scale = Vector2( 2, 2 )
z_index = -1
frames = SubResource( 28 )
animation = "Idle (R)"
frame = 4
playing = true

[node name="MonsterBully" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 416, 520 )
scale = Vector2( 4, 4 )
frames = SubResource( 30 )

[node name="Busted" type="Sprite" parent="."]
position = Vector2( 454, 504 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Textbox" parent="." instance=ExtResource( 6 )]

[node name="BeginScene" type="Timer" parent="."]
wait_time = 3.0

[node name="BullyComes" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="SceneChange" type="Timer" parent="."]

[connection signal="timeout" from="BullyComes" to="." method="_on_BullyComes_timeout"]
